Copy from previous folder fixed